--- a/custom_components/orvibo_switch/manifest.json
+++ b/custom_components/orvibo_switch/manifest.json
@@ -1,15 +1,16 @@
 {
   "domain": "orvibo_switch",
   "name": "Orvibo Switch",
-  "documentation": "https://gitee.com/liheibai592/orvibo_switch/",
-  "issue_tracker": "https://gitee.com/liheibai592/orvibo_switch/issues",
+  "documentation": "https://github.com/abb3421/orvibo_switch/blob/main/README.md",
+  "issue_tracker": "https://github.com/abb3421/orvibo_switch/issues",
   "config_flow": true,
   "dependencies": ["switch"],
-  "codeowners": ["@liheibai592"],
+  "codeowners": ["@abb3421"],
   "version": "1.0.0",
   "requirements": [
     "aiohttp>=3.8.0",
     "hexdump>=1.0.1"
   ],
   "iot_class": "cloud_polling"
+
 }
